Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: N/A
-
Component/s: Storage Engine - InnoDB
-
Labels:
Description
The test case is ugly, but it seems to be deterministic. Apparently a certain data pattern is needed to make the failure happen, hopefully the analysis will help to generate it in a better manner.
Run with --mysqld=--innodb-page-size=4K.
--source include/have_innodb.inc
|
--source include/have_innodb_4k.inc
|
|
CREATE TABLE t (pk INT NOT NULL AUTO_INCREMENT, a INT, b INT, c VARCHAR(1), d VARCHAR(1), PRIMARY KEY (pk)) ENGINE=InnoDB ROW_FORMAT=COMPRESSED; |
START TRANSACTION; |
INSERT INTO t (pk) VALUES (NULL),(NULL),(NULL),(NULL),(NULL),(NULL),(NULL),(NULL),(NULL),(NULL),(NULL),(NULL),(NULL),(NULL),(NULL),(NULL),(NULL); |
INSERT INTO t (b) VALUES (45676),(6454); |
INSERT INTO t (a) VALUES (773324800); |
INSERT INTO t (pk) VALUES (NULL),(NULL),(NULL),(NULL); |
INSERT INTO t (d) VALUES ('y'),('e'); |
INSERT INTO t (b) VALUES (2143289344); |
INSERT INTO t (d) VALUES ('t'); |
INSERT INTO t (pk) VALUES (NULL),(NULL),(NULL),(NULL),(NULL),(NULL),(NULL),(NULL),(NULL),(NULL),(NULL),(NULL); |
INSERT INTO t (b) VALUES (684523520); |
INSERT INTO t (a) VALUES (28058); |
INSERT INTO t (pk) VALUES (3814); |
INSERT INTO t (d) VALUES ('g'); |
INSERT INTO t (a) VALUES (1712979968); |
INSERT INTO t (pk) VALUES (NULL),(NULL),(NULL),(NULL); |
INSERT INTO t (c) VALUES ('z'),('k'),('j'); |
INSERT INTO t (b) VALUES (-741408768); |
INSERT INTO t (c) VALUES ('k'),('o'); |
INSERT INTO t (a) VALUES (-239534080),(18406); |
INSERT INTO t (d) VALUES ('n'),('i'); |
INSERT INTO t (a) VALUES (-1181876224); |
INSERT INTO t (c) VALUES ('d'); |
INSERT INTO t (d) VALUES ('w'); |
INSERT INTO t (b) VALUES (12884); |
INSERT INTO t (pk) VALUES (-1696858112); |
INSERT INTO t (a) VALUES (-41811968); |
INSERT INTO t (d) VALUES ('p'); |
INSERT INTO t (pk) VALUES (NULL),(NULL),(NULL),(NULL),(NULL),(NULL),(NULL),(NULL); |
INSERT INTO t (d) VALUES ('d'); |
INSERT INTO t (pk) VALUES (17945); |
INSERT INTO t (d) VALUES ('v'); |
INSERT INTO t (b) VALUES (-1756233728),(-211681280); |
INSERT INTO t (d) VALUES ('x'); |
INSERT INTO t (c) VALUES ('t'); |
INSERT INTO t (pk) VALUES (1888550912); |
INSERT INTO t (d) VALUES ('w'); |
INSERT INTO t (b) VALUES (-1955594240); |
COMMIT; |
START TRANSACTION; |
INSERT INTO t (pk) VALUES (NULL),(NULL),(NULL),(NULL),(NULL),(NULL),(NULL),(NULL); |
INSERT INTO t (d) VALUES ('u'); |
ROLLBACK; |
START TRANSACTION; |
INSERT INTO t (c) VALUES ('a'); |
INSERT INTO t (pk) VALUES (NULL),(NULL),(NULL),(NULL); |
INSERT INTO t (b) VALUES (9468); |
INSERT INTO t (pk) VALUES (NULL),(NULL),(NULL),(NULL); |
INSERT INTO t (b) VALUES (59887); |
INSERT INTO t (d) VALUES ('q'); |
INSERT INTO t (pk) VALUES (1755512832); |
INSERT INTO t (a) VALUES (1505034240),(864354304); |
INSERT INTO t (c) VALUES ('p'); |
INSERT INTO t (a) VALUES (62797); |
INSERT INTO t (c) VALUES ('o'),('q'); |
INSERT INTO t (d) VALUES ('u'); |
COMMIT; |
|
# Cleanup
|
DROP TABLE t; |
10.6 d96436c9 |
mariadbd: /data/src/10.6/storage/innobase/btr/btr0btr.cc:2790: rec_t* btr_page_split_and_insert(ulint, btr_cur_t*,
|
rec_offs**, mem_heap_t**, const dtuple_t*, ulint, mtr_t*, dberr_t*): Assertion `*err == DB_SUCCESS' failed.
|
220627 2:07:35 [ERROR] mysqld got signal 6 ;
|
|
#7 0x00007f9c192f7662 in __GI___assert_fail (assertion=0x563ad869452f "*err == DB_SUCCESS", file=0x563ad8692218 "/data/src/10.6/storage/innobase/btr/btr0btr.cc", line=2790, function=0x563ad8694548 "rec_t* btr_page_split_and_insert(ulint, btr_cur_t*, rec_offs**, mem_heap_t**, const dtuple_t*, ulint, mtr_t*, dberr_t*)") at assert.c:101
|
No locals.
|
#8 0x0000563ad7faa1c4 in btr_page_split_and_insert (flags=0, cursor=0x7f9c0e664cc0, offsets=0x7f9c0e664c48, heap=0x7f9c0e664c40, tuple=0x7f9b540435b8, n_ext=0, mtr=0x7f9c0e665010, err=0x7f9c0e664b8c) at /data/src/10.6/storage/innobase/btr/btr0btr.cc:2790
|
block = 0x7f9c0e664cc8
|
page = 0x40e664a30 <error: Cannot access memory at address 0x40e664a30>
|
page_zip = 0x7f9b540435b8
|
new_block = 0x7f9c0e80f850
|
new_page = 0x0
|
new_page_zip = 0x0
|
split_rec = 0x7f9c0e6649c0 ""
|
left_block = 0x99d69e8a845f5200
|
right_block = 0x7f9c0e6649e0
|
page_cursor = 0x563ad7f9f7de <page_cur_search(buf_block_t const*, dict_index_t const*, dtuple_t const*, page_cur_t*)+56>
|
first_rec = 0x7f9c0e9ba000 ""
|
buf = 0x0
|
move_limit = 0x563ad7f9f79c <page_cur_search(buf_block_t const*, dict_index_t const*, dtuple_t const*, page_cur_mode_t, page_cur_t*)+211> "H\203\304\020H\213E\360\311\303UH\211\345H\203\354 H\211}\370H\211u\360H\211U\350H\211M\340H\213M\340H\213U\350H\213u\360H\213E\370I\211\310\271\004"
|
n_iterations = 0
|
n_uniq = 140308233210416
|
__PRETTY_FUNCTION__ = "rec_t* btr_page_split_and_insert(ulint, btr_cur_t*, rec_offs**, mem_heap_t**, const dtuple_t*, ulint, mtr_t*, dberr_t*)"
|
insert_left = false
|
hint_page_no = 32667
|
direction = 0 '\000'
|
page_level = 0
|
insert_will_fit = false
|
rec = 0x0
|
insert_block = 0x7f9c0e664a40
|
#9 0x0000563ad7fa7e76 in btr_root_raise_and_insert (flags=0, cursor=0x7f9c0e664cc0, offsets=0x7f9c0e664c48, heap=0x7f9c0e664c40, tuple=0x7f9b540435b8, n_ext=0, mtr=0x7f9c0e665010, err=0x7f9c0e664b8c) at /data/src/10.6/storage/innobase/btr/btr0btr.cc:1972
|
index = 0x7f9b540fac48
|
new_page_no = 4
|
rec = 0x7f9c0e9ba07e "\032\334"
|
node_ptr = 0x7f9b5405ac58
|
level = 0
|
node_ptr_rec = 0x7f9c0e9b807e "\032\334"
|
page_cursor = 0x7f9c0e664cc8
|
root_page_zip = 0x7f9c0e80f6f8
|
new_page_zip = 0x7f9c0e80f898
|
root = 0x7f9c0e80f6b0
|
new_block = 0x7f9c0e80f850
|
__PRETTY_FUNCTION__ = "rec_t* btr_root_raise_and_insert(ulint, btr_cur_t*, rec_offs**, mem_heap_t**, const dtuple_t*, ulint, mtr_t*, dberr_t*)"
|
root_id = {m_id = 21474836483}
|
e = 32667
|
max_trx_id = 56
|
#10 0x0000563ad7fd4033 in btr_cur_pessimistic_insert (flags=0, cursor=0x7f9c0e664cc0, offsets=0x7f9c0e664c48, heap=0x7f9c0e664c40, entry=0x7f9b540435b8, rec=0x7f9c0e664c50, big_rec=0x7f9c0e664c38, n_ext=0, thr=0x7f9b54235398, mtr=0x7f9c0e665010) at /data/src/10.6/storage/innobase/btr/btr0cur.cc:3704
|
index = 0x7f9b540fac48
|
big_rec_vec = 0x0
|
inherit = false
|
n_reserved = 0
|
__PRETTY_FUNCTION__ = "dberr_t btr_cur_pessimistic_insert(ulint, btr_cur_t*, rec_offs**, mem_heap_t**, dtuple_t*, rec_t**, big_rec_t**, ulint, que_thr_t*, mtr_t*)"
|
err = DB_FAIL
|
#11 0x0000563ad7ebdc70 in row_ins_clust_index_entry_low (flags=0, mode=10, index=0x7f9b540fac48, n_uniq=1, entry=0x7f9b540435b8, n_ext=0, thr=0x7f9b54235398) at /data/src/10.6/storage/innobase/row/row0ins.cc:2768
|
insert_rec = 0x0
|
pcur = {btr_cur = {index = 0x7f9b540fac48, page_cur = {index = 0x0, rec = 0x7f9c0e9baa2b "\360\221", offsets = 0x0, block = 0x7f9c0e80f850}, purge_node = 0x0, left_block = 0x0, thr = 0x7f9b54235398, flag = BTR_CUR_BINARY, tree_height = 1, up_match = 0, up_bytes = 0, low_match = 0, low_bytes = 0, n_fields = 0, n_bytes = 0, fold = 0, path_arr = 0x0, rtr_info = 0x0}, latch_mode = 10, old_stored = false, old_rec = 0x0, old_n_core_fields = 5, old_n_fields = 0, rel_pos = 0, block_when_stored = {m_block = 0x0, m_page_id = {m_id = 0}}, modify_clock = 0, pos_state = BTR_PCUR_IS_POSITIONED, search_mode = PAGE_CUR_LE, trx_if_known = 0x0, old_rec_buf = 0x0, buf_size = 0}
|
cursor = 0x7f9c0e664cc0
|
err = DB_FAIL
|
big_rec = 0x0
|
mtr = {m_start = true, m_commit = false, m_freeing_tree = false, m_last = 0x7f9c0e80f6b0, m_last_offset = 116, m_log_mode = 0, m_modifications = 1, m_made_dirty = 1, m_inside_ibuf = 0, m_trim_pages = 0, m_user_space_id = 5, m_memo = {m_heap = 0x0, m_list = {<ilist<mtr_buf_t::block_t, void>> = {sentinel_ = {next = 0x7f9c0e665050, prev = 0x7f9c0e665050}}, size_ = 1}, m_size = 160, m_first_block = {<ilist_node<void>> = {next = 0x7f9c0e665030, prev = 0x7f9c0e665030}, m_buf_end = 0, m_magic_n = 375767, m_data = "\270\255\017T\233\177\000\000\200\000\000\000\000\000\000\000\260\366\200\016\234\177\000\000\b\000\000\000\000\000\001\000\260\366\200\016\234\177\000\000\002\000\000\000:V\000\000\b\006 T\233\177\000\000\000\001\000\000\233\177\000\000\240\362\200\016\234\177\000\000\004\000\000\000\001\000\000\000\260\366\200\016\234\177\000\000\024\000\000\000:V\000\000\020\365\200\016\234\177\000\000\024\000\000\000l\026\000\000\240\362\200\016\234\177\000\000\004\000\000\000:V\000\000\240\362\200\016\234\177\000\000\024\000\000\000\233\177\000\000P\370\200\016\234\177\000\000\022\000\000\000\212\236\326\231pQf\016\234\177\000\000\317(M\327:V\000\000@Qf\016\234\177\000\000\270\201\"T\233\177\000\000\320G#T\233\177\000\000"..., m_used = 160}}, m_log = {m_heap = 0x7f9b5420ff08, m_list = {<ilist<mtr_buf_t::block_t, void>> = {sentinel_ = {next = 0x7f9c0e665290, prev = 0x7f9b5405a270}}, size_ = 6}, m_size = 2335, m_first_block = {<ilist_node<void>> = {next = 0x7f9b5420ff88, prev = 0x7f9c0e665270}, m_buf_end = 0, m_magic_n = 375767, m_data = "5\005\000\200/\376\064\005\000=\005\022\005\004\070\005\002\202\062\000\000\000\004\022\005\004\060`\005\004\b\377\377\377\377\377\377\377\377\000\000\000\000\000\000\000\000E\277", '\000' <repeats 11 times>, "\005\000\002\000x\200\002\000\000\000\000\000\000\000\005", '\000' <repeats 21 times>, "\027", '\000' <repeats 20 times>, "H\211\342\224\346\340```\004\000\000\000\377\377\003\000\001\061\000\066\022\005\004\060\201\\\005\004\b\016\234\177\000\000\001\323\036\330\001V\000\000\260^\001T\233\177", '\000' <repeats 18 times>, "\240V\001T\000\000\000\000\233\n.\330:V\000\000\000\000\000\000\000\000\000\000"..., m_used = 147}}, m_user_space = 0x7f9b54200608, m_commit_lsn = 0, m_freed_space = 0x0, m_freed_pages = 0x0}
|
auto_inc = 1888550942
|
offsets_heap = 0x7f9b54057b18
|
offsets_ = {300, 2, 32894, 3739, 32668, 0, 44104, 21519, 32667, 0, 32774, 4, 8, 17, 32785, 32785, 32785, 18, 32512, 0, 38501, 6473, 32668, 0, 1, 32768, 3, 0, 0, 0, 32667, 0, 39896, 5139, 32668, 0, 20304, 3686, 32668, 0, 20568, 21504, 32667, 0, 20568, 21504, 32667, 0, 39880, 5139, 32668, 0, 20224, 3686, 32668, 0, 20568, 21504, 32667, 0, 208, 0, 0, 0, 267, 0, 0, 0, 0, 0, 0, 0, 20064, 3686, 32668, 0, 54804, 55323, 0, 1, 20096, 3686, 32668, 0, 54504, 55323, 22074, 0, 20096, 3686, 32668, 0, 20160, 3686, 32668, 0, 20, 0, 0, 0, 49248, 6610, 0, 0, 50559, 55339, 22074, 0, 0, 0, 0, 0, 20144, 3686, 32668, 0, 54804, 55323, 0, 1, 20176, 3686, 32668, 0, 54165, 55326, 22074, 0, 20176, 3686, 32668, 0, 3296, 21504, 32667, 0, 3296, 21504, 32667, 0, 3256, 21504, 1, 0, 20752, 3686, 32668, 0, 50695, 55326, 0, 0, 51198, 55339, 22074, 0, 0, 0, 0, 0, 20240, 3686, 32668, 0, 54804, 55323, 0, 1, 20272, 3686, 32668, 0, 54165, 55326, 22074, 0, 20272, 3686, 32668, 0, 3296, 21504, 32667, 0, 3296, 21504, 32667, 0, 3256, 21504, 1, 0, 20848, 3686, 32668, 0, 50695, 55326, 22074, 0...}
|
offsets = 0x7f9c0e664db0
|
trx = 0x7f9c14139b80
|
block = 0x7f9c0e80f6b0
|
_db_stack_frame_ = {func = 0x563ad8641ad3 "row_ins_clust_index_entry", file = 0x563ad8640290 "/data/src/10.6/storage/innobase/row/row0ins.cc", level = 2147483660, line = -1, prev = 0x7f9c0e665540}
|
__PRETTY_FUNCTION__ = "dberr_t row_ins_clust_index_entry_low(ulint, ulint, dict_index_t*, ulint, dtuple_t*, ulint, que_thr_t*)"
|
#12 0x0000563ad7ebf1c4 in row_ins_clust_index_entry (index=0x7f9b540fac48, entry=0x7f9b540435b8, thr=0x7f9b54235398, n_ext=0) at /data/src/10.6/storage/innobase/row/row0ins.cc:3164
|
err = DB_FAIL
|
n_uniq = 1
|
_db_stack_frame_ = {func = 0x563ad8641e5b "row_ins_index_entry_step", file = 0x563ad8640290 "/data/src/10.6/storage/innobase/row/row0ins.cc", level = 2147483659, line = -1, prev = 0x7f9c0e6655d0}
|
skip_locking = false
|
flags = 0
|
orig_n_fields = 7
|
#13 0x0000563ad7ebf618 in row_ins_index_entry (index=0x7f9b540fac48, entry=0x7f9b540435b8, thr=0x7f9b54235398) at /data/src/10.6/storage/innobase/row/row0ins.cc:3273
|
__PRETTY_FUNCTION__ = "dberr_t row_ins_index_entry(dict_index_t*, dtuple_t*, que_thr_t*)"
|
#14 0x0000563ad7ebfee4 in row_ins_index_entry_step (node=0x7f9b54235110, thr=0x7f9b54235398) at /data/src/10.6/storage/innobase/row/row0ins.cc:3441
|
err = DB_SUCCESS
|
_db_stack_frame_ = {func = 0x563ad8641f5c "row_ins", file = 0x563ad8640290 "/data/src/10.6/storage/innobase/row/row0ins.cc", level = 2147483658, line = -1, prev = 0x7f9c0e665640}
|
__PRETTY_FUNCTION__ = "dberr_t row_ins_index_entry_step(ins_node_t*, que_thr_t*)"
|
#15 0x0000563ad7ec041a in row_ins (node=0x7f9b54235110, thr=0x7f9b54235398) at /data/src/10.6/storage/innobase/row/row0ins.cc:3587
|
err = 32667
|
index = 0x7f9b540fac48
|
type = 3
|
_db_stack_frame_ = {func = 0x563ad85e0a33 "ha_innobase::write_row", file = 0x563ad85dc368 "/data/src/10.6/storage/innobase/handler/ha_innodb.cc", level = 2147483657, line = -1, prev = 0x7f9c0e665970}
|
__PRETTY_FUNCTION__ = "dberr_t row_ins(ins_node_t*, que_thr_t*)"
|
#16 0x0000563ad7ec0cc6 in row_ins_step (thr=0x7f9b54235398) at /data/src/10.6/storage/innobase/row/row0ins.cc:3727
|
node = 0x7f9b54235110
|
parent = 0x7f9b54235398
|
sel_node = 0x0
|
trx = 0x7f9c14139b80
|
err = 32667
|
__PRETTY_FUNCTION__ = "que_thr_t* row_ins_step(que_thr_t*)"
|
#17 0x0000563ad7ee1cdb in row_insert_for_mysql (mysql_rec=0x7f9b541ff718 "\367\036", prebuilt=0x7f9b54234b58, ins_mode=ROW_INS_NORMAL) at /data/src/10.6/storage/innobase/row/row0mysql.cc:1309
|
savept = {least_undo_no = 19}
|
thr = 0x7f9b54235398
|
err = 2147483649
|
was_lock_wait = 94810728965266
|
trx = 0x7f9c14139b80
|
node = 0x7f9b54235110
|
table = 0x7f9b540ffca8
|
blob_heap = 0x0
|
__PRETTY_FUNCTION__ = "dberr_t row_insert_for_mysql(const byte*, row_prebuilt_t*, ins_mode_t)"
|
#18 0x0000563ad7d228c5 in ha_innobase::write_row (this=0x7f9b54233e80, record=0x7f9b541ff718 "\367\036") at /data/src/10.6/storage/innobase/handler/ha_innodb.cc:7923
|
error = 3616688476
|
wsrep_auto_inc_inserted = false
|
error_result = 0
|
auto_inc_used = true
|
_db_stack_frame_ = {func = 0x563ad84be900 "handler::ha_write_row", file = 0x563ad84bb15c "/data/src/10.6/sql/handler.cc", level = 2147483656, line = -1, prev = 0x7f9c0e6659e0}
|
trx = 0x7f9c14139b80
|
vers_set_fields = ROW_INS_NORMAL
|
__PRETTY_FUNCTION__ = "virtual int ha_innobase::write_row(const uchar*)"
|
#19 0x0000563ad791fd79 in handler::ha_write_row (this=0x7f9b54233e80, buf=0x7f9b541ff718 "\367\036") at /data/src/10.6/sql/handler.cc:7549
|
sub_locker = 0x7f9c0e665a00
|
reentrant_safe_state = {m_flags = 7, m_io_operation = PSI_TABLE_WRITE_ROW, m_table = 0x7f9b54239980, m_table_share = 0x7f9c0e665ad0, m_thread = 0x7f9c18c1c080, m_timer_start = 9745747803711360, m_timer = 0x563ad7c786d0 <my_timer_cycles()>, m_wait = 0x7f9c18c1c9a8, m_index = 64}
|
this_tracker = 0x0
|
error = 0
|
__PRETTY_FUNCTION__ = "int handler::ha_write_row(const uchar*)"
|
_db_stack_frame_ = {func = 0x563ad82cc53c "write_record", file = 0x563ad82cbf48 "/data/src/10.6/sql/sql_insert.cc", level = 2147483655, line = -1, prev = 0x7f9c0e665ad0}
|
#20 0x0000563ad752a111 in write_record (thd=0x7f9b54000db8, table=0x7f9b542281b8, info=0x7f9c0e665c90, sink=0x0) at /data/src/10.6/sql/sql_insert.cc:2151
|
error = 22074
|
trg_error = 0
|
key = 0x0
|
save_read_set = 0x7f9b542282e8
|
save_write_set = 0x7f9b54228308
|
prev_insert_id = 0
|
insert_id_for_cur_row = 0
|
prev_insert_id_for_cur_row = 0
|
_db_stack_frame_ = {func = 0x563ad82cc011 "mysql_insert", file = 0x563ad82cbf48 "/data/src/10.6/sql/sql_insert.cc", level = 2147483654, line = -1, prev = 0x7f9c0e665c20}
|
__PRETTY_FUNCTION__ = "int write_record(THD*, TABLE*, COPY_INFO*, select_result*)"
|
#21 0x0000563ad7526dfc in mysql_insert (thd=0x7f9b54000db8, table_list=0x7f9b540156a0, fields=@0x7f9b54005fc8: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x7f9b54015ea8, last = 0x7f9b54015ea8, elements = 1}, <No data fields>}, values_list=@0x7f9b54006010: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x7f9b540163d8, last = 0x7f9b540163d8, elements = 1}, <No data fields>}, update_fields=@0x7f9b54005ff8: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x563ad8e99100 <end_of_list>, last = 0x7f9b54005ff8, elements = 0}, <No data fields>}, update_values=@0x7f9b54005fe0: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x563ad8e99100 <end_of_list>, last = 0x7f9b54005fe0, elements = 0}, <No data fields>}, duplic=DUP_ERROR, ignore=false, result=0x0) at /data/src/10.6/sql/sql_insert.cc:1128
|
retval = true
|
error = 0
|
res = 0
|
transactional_table = false
|
joins_freed = false
|
changed = 84
|
was_insert_delayed = false
|
using_bulk_insert = false
|
value_count = 1
|
counter = 1
|
iteration = 0
|
id = 0
|
info = {records = 1, deleted = 0, updated = 0, copied = 0, accepted_rows = 0, error_count = 0, touched = 0, handle_duplicates = DUP_ERROR, escape_char = 0, last_errno = 0, ignore = false, update_fields = 0x7f9b54005ff8, update_values = 0x7f9b54005fe0, view = 0x0, table_list = 0x7f9b540156a0}
|
table = 0x7f9b542281b8
|
its = {<base_list_iterator> = {list = 0x7f9b54006010, el = 0x7f9b540163d8, prev = 0x0, current = 0x0}, <No data fields>}
|
values = 0x7f9b54016330
|
context = 0x7f9b54015f00
|
ctx_state = {save_table_list = 0x7f9b540156a0, save_first_name_resolution_table = 0x7f9b540156a0, save_next_name_resolution_table = 0x0, save_resolve_in_select_list = false, save_next_local = 0x0}
|
returning = 0x0
|
readbuff = 0x0
|
query = 0x7f9b540155c0 "INSERT INTO t (d) VALUES ('u')"
|
log_on = true
|
lock_type = TL_WRITE_CONCURRENT_INSERT
|
unused_conds = 0x0
|
_db_stack_frame_ = {func = 0x563ad82d8cd0 "mysql_execute_command", file = 0x563ad82d7fa8 "/data/src/10.6/sql/sql_parse.cc", level = 2147483653, line = -1, prev = 0x7f9c0e665f70}
|
__PRETTY_FUNCTION__ = "bool mysql_insert(THD*, TABLE_LIST*, List<Item>&, List<List<Item> >&, List<Item>&, List<Item>&, enum_duplicates, bool, select_result*)"
|
#22 0x0000563ad757b11a in mysql_execute_command (thd=0x7f9b54000db8, is_called_from_prepared_stmt=false) at /data/src/10.6/sql/sql_parse.cc:4564
|
sel_result = 0x0
|
save_protocol = 0x0
|
res = 0
|
up_result = 0
|
lex = 0x7f9b54005058
|
select_lex = 0x7f9b54015eb8
|
first_table = 0x7f9b540156a0
|
all_tables = 0x7f9b540156a0
|
unit = 0x7f9b54005120
|
have_table_map_for_update = false
|
rpl_filter = 0x3a
|
_db_stack_frame_ = {func = 0x563ad82da037 "mysql_parse", file = 0x563ad82d7fa8 "/data/src/10.6/sql/sql_parse.cc", level = 2147483652, line = -1, prev = 0x7f9c0e666380}
|
__PRETTY_FUNCTION__ = "int mysql_execute_command(THD*, bool)"
|
ots = {ctx = 0x7f9b54004d20, traceable = false}
|
orig_binlog_format = BINLOG_FORMAT_MIXED
|
orig_current_stmt_binlog_format = BINLOG_FORMAT_STMT
|
#23 0x0000563ad7586aa0 in mysql_parse (thd=0x7f9b54000db8, rawbuf=0x7f9b540155c0 "INSERT INTO t (d) VALUES ('u')", length=30, parser_state=0x7f9c0e666500) at /data/src/10.6/sql/sql_parse.cc:8029
|
found_semicolon = 0x0
|
error = 32667
|
lex = 0x7f9b54005058
|
err = false
|
_db_stack_frame_ = {func = 0x563ad82d8521 "dispatch_command", file = 0x563ad82d7fa8 "/data/src/10.6/sql/sql_parse.cc", level = 2147483651, line = -1, prev = 0x7f9c0e6664e0}
|
__PRETTY_FUNCTION__ = "void mysql_parse(THD*, char*, uint, Parser_state*)"
|
#24 0x0000563ad7573103 in dispatch_command (command=COM_QUERY, thd=0x7f9b54000db8, packet=0x7f9b5400b879 "INSERT INTO t (d) VALUES ('u')", packet_length=30, blocking=true) at /data/src/10.6/sql/sql_parse.cc:1896
|
packet_end = 0x7f9b540155de ""
|
parser_state = {m_lip = {lookahead_token = -1, lookahead_yylval = 0x0, m_thd = 0x7f9b54000db8, m_ptr = 0x7f9b540155df "\004", m_tok_start = 0x7f9b540155df "\004", m_tok_end = 0x7f9b540155df "\004", m_end_of_query = 0x7f9b540155de "", m_tok_start_prev = 0x7f9b540155de "", m_buf = 0x7f9b540155c0 "INSERT INTO t (d) VALUES ('u')", m_buf_length = 30, m_echo = true, m_echo_saved = false, m_cpp_buf = 0x7f9b54015638 "INSERT INTO t (d) VALUES ('u')", m_cpp_ptr = 0x7f9b54015656 "", m_cpp_tok_start = 0x7f9b54015656 "", m_cpp_tok_start_prev = 0x7f9b54015656 "", m_cpp_tok_end = 0x7f9b54015656 "", m_body_utf8 = 0x0, m_body_utf8_ptr = 0x154000cb8 <error: Cannot access memory at address 0x154000cb8>, m_cpp_utf8_processed_ptr = 0x0, next_state = MY_LEX_END, found_semicolon = 0x0, ignore_space = false, stmt_prepare_mode = false, multi_statements = true, yylineno = 1, m_digest = 0x0, in_comment = NO_COMMENT, in_comment_saved = (unknown: 0x10000), m_cpp_text_start = 0x7f9b54015653 "u')", m_cpp_text_end = 0x7f9b54015654 "')", m_underscore_cs = 0x0}, m_yacc = {yacc_yyss = 0x0, yacc_yyvs = 0x0, m_set_signal_info = {m_item = {0x0 <repeats 12 times>}}, m_lock_type = TL_READ_DEFAULT, m_mdl_type = MDL_SHARED_READ}, m_digest_psi = 0x7f9b54004ab0}
|
net = 0x7f9b540010f0
|
error = false
|
do_end_of_statement = true
|
_db_stack_frame_ = {func = 0x563ad82d81a5 "do_command", file = 0x563ad82d7fa8 "/data/src/10.6/sql/sql_parse.cc", level = 2147483650, line = -1, prev = 0x7f9c0e666dc0}
|
drop_more_results = false
|
__PRETTY_FUNCTION__ = "dispatch_command_return dispatch_command(enum_server_command, THD*, char*, uint, bool)"
|
__FUNCTION__ = "dispatch_command"
|
res = <optimized out>
|
#25 0x0000563ad7571afe in do_command (thd=0x7f9b54000db8, blocking=true) at /data/src/10.6/sql/sql_parse.cc:1409
|
return_value = DISPATCH_COMMAND_SUCCESS
|
packet = 0x7f9b5400b878 "\003INSERT INTO t (d) VALUES ('u')"
|
packet_length = 31
|
net = 0x7f9b540010f0
|
command = COM_QUERY
|
_db_stack_frame_ = {func = 0x563ad872b3a0 "?func", file = 0x563ad872b3a6 "?file", level = 2147483649, line = -1, prev = 0x0}
|
__PRETTY_FUNCTION__ = "dispatch_command_return do_command(THD*, bool)"
|
__FUNCTION__ = "do_command"
|
#26 0x0000563ad772bc86 in do_handle_one_connection (connect=0x563ada08fd88, put_in_cache=true) at /data/src/10.6/sql/sql_connect.cc:1418
|
create_user = true
|
thr_create_utime = 2707147757857
|
thd = 0x7f9b54000db8
|
__PRETTY_FUNCTION__ = "void do_handle_one_connection(CONNECT*, bool)"
|
#27 0x0000563ad772b925 in handle_one_connection (arg=0x563ada07cd28) at /data/src/10.6/sql/sql_connect.cc:1312
|
connect = 0x563ada07cd28
|
#28 0x0000563ad7c4713e in pfs_spawn_thread (arg=0x563ad9fc1288) at /data/src/10.6/storage/perfschema/pfs.cc:2201
|
typed_arg = 0x563ad9fc1288
|
user_arg = 0x563ada07cd28
|
user_start_routine = 0x563ad772b8ca <handle_one_connection(void*)>
|
pfs = 0x7f9c18c1aa40
|
klass = 0x563ad98cc940
|
#29 0x00007f9c197c3ea7 in start_thread (arg=<optimized out>) at pthread_create.c:477
|
ret = <optimized out>
|
pd = <optimized out>
|
unwind_buf = {cancel_jmp_buf = {{jmp_buf = {140308233221888, 7658139390389518372, 140733419004942, 140733419004943, 140308233219968, 311296, -7674360265892691932, -7674380283142864860}, mask_was_saved = 0}}, priv = {pad = {0x0, 0x0, 0x0, 0x0}, data = {prev = 0x0, cleanup = 0x0, canceltype = 0}}}
|
not_first_call = 0
|
#30 0x00007f9c193c0def in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
|
The failure started happening on 10.6 after this commit:
commit 0b47c126e31cddda1e94588799599e138400bcf8
|
Author: Marko Mäkelä
|
Date: Mon Jun 6 14:03:22 2022 +0300
|
|
MDEV-13542: Crashing on corrupted page is unhelpful
|
Attachments
Issue Links
- is caused by
-
MDEV-13542 Crashing on a corrupted page is unhelpful
-
- Closed
-
- is duplicated by
-
MDEV-29003 Assertion `*err == DB_SUCCESS' failed in btr_page_split_and_insert
-
- Closed
-